--- a/src/ChromePlugin/manifest.json
+++ b/src/ChromePlugin/manifest.json
@@ -15,8 +15,11 @@
   ],
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "NetWorkMonitor"
+    "default_title": "NetWorkMonitor",
+    "default_popup": "popup.html"
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_security_policy":"script-src 'self' https://www.gstatic.com; object-src 'self'"
+
 }
 
